<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_app_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_begin_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_end_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid_start_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="@id/guid_end_vertical"
        app:layout_constraintStart_toStartOf="@id/guid_begin_vertical"
        app:layout_constraintTop_toBottomOf="@id/guid_start_horizontal"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/et_username_hint"
            android:inputType="text"
            android:drawableStart="@drawable/person"
            android:drawablePadding="@dimen/padding_small"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="@id/guid_end_vertical"
        app:layout_constraintStart_toStartOf="@id/guid_begin_vertical"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/et_password_hint"
            android:inputType="textPassword"
            android:drawableStart="@drawable/key"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/padding_small"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:theme="@style/Theme.MaterialComponents"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/mb_login_text"
        app:layout_constraintEnd_toStartOf="@id/tv_signUp"
        app:layout_constraintStart_toStartOf="@id/guid_begin_vertical"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        app:cornerRadius="8dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp"
        app:backgroundTint="@android:color/transparent"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tv_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:paddingTop="@dimen/padding_small"
        android:text="@string/loginFragment_signUp_tv"
        app:layout_constraintEnd_toEndOf="@id/guid_end_vertical"
        app:layout_constraintStart_toEndOf="@id/mb_login"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>